@startuml
' Dependency Inversion Principle - UML Class Diagram

package "WeatherApp" {
  interface IHttpService
  interface IWeatherProvider
  class HttpService
  class HttpWeatherProvider
  class SecondHttpWeatherProvider
  class WeatherCli
  class ServiceExtensions <<static>>
}

package "WeatherApp.Models" {
  class Coordinates
  class ForecastDto
  class CurrentDto
  class CurrentWeatherForecastDto
  class CurrentWeatherDto
}

package "WeatherApp.Utils" {
  class WeatherApiConstants <<static>>
}

' Implementations
HttpService ..|> IHttpService
HttpWeatherProvider ..|> IWeatherProvider
SecondHttpWeatherProvider ..|> IWeatherProvider

' Dependencies
HttpWeatherProvider --> IHttpService
SecondHttpWeatherProvider --> IHttpService
WeatherCli --> IWeatherProvider
ServiceExtensions ..> IHttpService
ServiceExtensions ..> IWeatherProvider

' Model relationships
ForecastDto *-- CurrentDto
CurrentWeatherForecastDto *-- CurrentWeatherDto

@enduml